src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/InboundLead__c.object-meta.xml
<CustomObject>
    <description>This is a temporary storage object designed to capture and hold inbound leads prior to their conversion into official Lead records. This object ensures that every web lead is reliably recorded in the database, providing a buffer against invalid or incomplete data that might otherwise disrupt the standard Lead creation process. By utilizing this object, we can facilitate error handling and review of web leads, ensuring that all submissions are accounted for and processed efficiently, even in cases of data inconsistency.</description>
    <label>Inbound Lead</label>
    <nameField>
        <displayFormat>INL-{0000}</displayFormat>
        <label>Inbound Lead #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Leads</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>