src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <label>Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>