src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/AddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>AddressCountryCode__c</fullName>
    <label>Address Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>