src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/AddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostalCode__c</fullName>
    <label>Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>