src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/AddressStateCode__c.field-meta.xml
<CustomField>
    <fullName>AddressStateCode__c</fullName>
    <label>Address State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>