src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/ConvertedToInteractionLeadEntry__c.field-meta.xml
<CustomField>
    <fullName>ConvertedToInteractionLeadEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Lead Interaction Entry</label>
    <referenceTo>LeadInteractionEntry__c</referenceTo>
    <relationshipLabel>Inbound Leads</relationshipLabel>
    <relationshipName>Inbound_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>