src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/ConvertedToLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedToLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted to Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Inbound Leads</relationshipLabel>
    <relationshipName>InboundLeads</relationshipName>
    <type>Lookup</type>
</CustomField>