src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>