src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/ProcessingReason__c.field-meta.xml
<CustomField>
    <fullName>ProcessingReason__c</fullName>
    <label>Processing Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>