src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/ProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStatus__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>