src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>