src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLead__c/validationRules/Processed_lead_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Processed_lead_blocked</fullName>
    <active>true</active>
    <description>Block any modification from being made on an already processed Inbound Lead.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISPICKVAL(PRIORVALUE(ProcessingStatus__c), &apos;Processed&apos;))</errorConditionFormula>
    <errorMessage>This Inbound Lead has already been processed. No further modifications are allowed.</errorMessage>
</ValidationRule>